--- a/templates/wg.conf.j2
+++ b/templates/wg.conf.j2
@@ -1,8 +1,8 @@
 #jinja2: lstrip_blocks:"True",trim_blocks:"True"
 [Interface]
-Address = {{hostvars[inventory_hostname].wireguard_address}}
+Address = {{ hostvars[inventory_hostname][item + '_address'] }}
 PrivateKey = {{private_key}}
-ListenPort = {{wireguard_port}}
+ListenPort = {{ hostvars[inventory_hostname][item + '_port'] }}
 {% if hostvars[inventory_hostname].wireguard_dns is defined %}
 DNS = {{hostvars[inventory_hostname].wireguard_dns}}
 {% endif %}
@@ -16,22 +16,22 @@ PostDown = {{hostvars[inventory_hostname].wireguard_postdown}}
 SaveConfig = true
 {% endif %}
 
-{% for host in groups["vpn"] %}
+{% for host in groups[item] %}
   {% if host != inventory_hostname %}
     [Peer]
     PublicKey = {{hostvars[host].public_key}}
     {% if hostvars[host].wireguard_allowed_ips is defined %}
     AllowedIPs = {{hostvars[host].wireguard_allowed_ips}}
     {% else %}
-    AllowedIPs = {{hostvars[host].wireguard_ip}}/32
+    AllowedIPs = {{ hostvars[host][item + '_ip'].split('/')[0] }}/32
     {% endif %}
     {% if hostvars[host].wireguard_persistent_keepalive is defined %}
     PersistentKeepalive = {{hostvars[host].wireguard_persistent_keepalive}}
     {% endif %}
     {% if hostvars[host].wireguard_endpoint is not defined %}
-    Endpoint = {{host}}:{{wireguard_port}}
+    Endpoint = {{host}}:{{ hostvars[host][item + '_port'] }}
     {% elif hostvars[host].wireguard_endpoint != "" %}
-    Endpoint = {{hostvars[host].wireguard_endpoint}}:{{wireguard_port}}
+    Endpoint = {{hostvars[host].wireguard_endpoint}}:{{ hostvars[host][item + '_port'] }}
     {% endif %}
 
   {% endif %}
